<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">ZenChat</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_text">Welcome to ZenChat</string>
    <string name="read_our">Read our</string>
    <string name="privacy_policy">Privacy Policy.</string>
    <string name="tap_agree_and_continue_to_accept_the">Tap Agree and continue to accept the</string>
    <string name="terms_of_service">Terms of Service.</string>
    <string name="agree_and_continue">Agree and Continue</string>
    <string name="from">from</string>
    <string name="meta">Meta</string>
    <string name="otpVerification">OTP Verification</string>
    <string name="otpCommand1">We will send you an</string>
    <string name="otpCommand2">One Time Password</string>
    <string name="otpCommand3">on this mobile number</string>
    <string name="mobileNumberRequestText">Enter Mobile Number</string>
    <string name="mobileNumberFormat">123 – 456 – 7890</string>
    <string name="generateOTP">Generate OTP</string>
    <string name="otpCommand4">Enter OTP send to</string>
    <string name="sampleMobileNumber">+9190876653421</string>
    <string name="receiveOTP">Don\'t receive the OTP?</string>
    <string name="resendOTP">RESEND OTP</string>
    <string name="verify">Verify</string>
    <string name="profileSetup">Profile Setup</string>
    <string name="profileSetupCommand">Please set your name and optional profile photo</string>
    <string name="name">Type your name here</string>
    <string name="setupProfile">Setup Profile</string>
    <string name="settings">Settings</string>
    <string name="camera">Camera</string>
    <string name="search">Search</string>
    <string name="group">Group</string>
    <string name="call">Call</string>
    <string name="status">Status</string>
    <string name="chat">Chat</string>
    <string name="online">Online</string>
    <string name="sample">Sample</string>
    <string name="message_hint" tools:ignore="TypographyEllipsis">Type your message ...</string>
    <string name="sampleDisplayTime">6:00 PM</string>
    <string name="sampleDisplayChat">Tap to chat</string>
    <string name="username">UserName</string>
    <string name="chatbot">ChatBot</string>
    <string name="delete_for_everyone">Delete for Everyone</string>
    <string name="delete_for_me">Delete for Me</string>
    <string name="cancel">Cancel</string>
    <string name="can_t_talk_zenchat_only">Can\'t talk, ZenChat Only</string>
    <string name="account">Account</string>
    <string name="security_notifications_change_number">Security notifications, change number</string>
    <string name="privacy">Privacy</string>
    <string name="block_contacts_disappearing_messages">Block contacts, disappearing messages</string>
    <string name="avatar">Avatar</string>
    <string name="create_edit_profile_photo">Create, edit, profile photo</string>
    <string name="chats">Chats</string>
    <string name="theme_wallpapers_chat_history">Theme, wallpapers, chat history</string>
    <string name="notifications">Notifications</string>
    <string name="message_group_amp_call_tones"><![CDATA[Message, group & call tones]]></string>
    <string name="storage_and_data">Storage and data</string>
    <string name="network_usage_auto_download">Network usage, auto-download</string>
    <string name="app_language">App language</string>
    <string name="english_device_s_language">English (device\'s language)</string>
    <string name="help">Help</string>
    <string name="help_center_contact_us_privacy_policy">Help center, contact us, privacy policy</string>
    <string name="invite_a_friend">Invite a friend</string>
    <string name="zenChat">ZenChat</string>
    <string name="new_group">New group</string>
    <string name="new_broadcast">New broadcast</string>
    <string name="payments">Payments</string>
    <string name="starred_messages">Starred messages</string>
    <string name="linked_devices">Linked devices</string>
    <string name="profile">Profile</string>
    <string name="this_is_not_your_username_or_pin_this_name_will_be_visible_to_your_zenchat_contacts">This is not your username or pin. This name will be visible to your ZenChat contacts.</string>
    <string name="about">About</string>
    <string name="name_text">Name</string>
    <string name="type_your_name_here">Type your name here</string>
    <string name="description">Description</string>
    <string name="_05_12_23">05/12/23</string>
    <string name="send_image">Send image</string>
    <string name="document">Document</string>
    <string name="profile_photo">Profile photo</string>
    <string name="view_contact">View contact</string>
    <string name="media_links_and_docs">Media, links, and docs</string>
    <string name="mute_notifications">Mute notifications</string>
    <string name="disappearing_messages">Disappearing messages</string>
    <string name="wallpaper">Wallpaper</string>
    <string name="more">More</string>
    <string name="report">Report</string>
    <string name="block">Block</string>
    <string name="clear_chat">Clear chat</string>
    <string name="export_chat">Export chat</string>
    <string name="add_shortcut">Add shortcut</string>
    <string name="type_your_about_here" tools:ignore="TypographyEllipsis">Type your about here ...</string>
</resources>