<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


        <group android:id="@+id/action_more" android:menuCategory="container">
        <item
            android:id="@+id/action_view_contact"
            android:title="@string/view_contact"/>

        <item
            android:id="@+id/action_media_link_docs"
            android:title="@string/media_links_and_docs"/>

        <item
            android:id="@+id/action_mute_notifications"
            android:title="@string/search"/>

        <item
            android:id="@+id/action_starred_messages"
            android:title="@string/mute_notifications"/>

        <item
            android:id="@+id/action_disappearing_messages"
            android:title="@string/disappearing_messages"/>

        <item
            android:id="@+id/action_wallpaper"
            android:title="@string/wallpaper"/>

        <item
            android:id="@+id/action_more_view"
            android:title="@string/more">

                <menu>

                        <item
                            android:id="@+id/action_report"
                            android:title="@string/report"/>

                        <item
                            android:id="@+id/action_Block"
                            android:title="@string/block"/>

                        <item
                            android:id="@+id/action_clear_chat"
                            android:title="@string/clear_chat"/>

                        <item
                            android:id="@+id/action_export_chat"
                            android:title="@string/export_chat"/>

                        <item
                            android:id="@+id/action_add_shortcut"
                            android:title="@string/add_shortcut"/>

                </menu>


        </item>

        </group>

</menu>