<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/main"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@color/white"
tools:context=".activities.profile.SetupProfileActivity">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toTopOf="parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profileImage"
            android:layout_width="@dimen/_140sdp"
            android:layout_height="@dimen/_140sdp"
            android:layout_marginTop="@dimen/_35sdp"
            android:src="@drawable/avatar"
            android:transitionName="image"
            tools:ignore="MissingConstraints" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floating"
            android:layout_width="@dimen/_45sdp"
            android:layout_height="@dimen/_45sdp"
            android:layout_alignEnd="@id/profileImage"
            android:layout_alignBottom="@id/profileImage"
            android:backgroundTint="@color/sea"
            android:scaleType="center"
            android:src="@drawable/camera_icon"
            android:tint="@null"
            app:shapeAppearanceOverlay="@style/fab_3_rounded"
            tools:ignore="ContentDescription" />

    </RelativeLayout>

<TextView
    android:id="@+id/profileSetup"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/_30sdp"
    android:fontFamily="@font/lexend_exa"
    android:text="@string/profileSetup"
    android:textColor="@color/black"
    android:textSize="@dimen/_22ssp"
    android:textStyle="bold"
    app:layout_constraintEnd_toEndOf="@+id/relativeLayout"
    app:layout_constraintStart_toStartOf="@+id/relativeLayout"
    app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />

<TextView
    android:id="@+id/profileSetupCommand"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/_20sdp"
    android:fontFamily="@font/convergence"
    android:gravity="center"
    android:lineSpacingExtra="@dimen/_4ssp"
    android:text="@string/profileSetupCommand"
    android:textColor="@color/spicyPink"
    android:textSize="@dimen/_14ssp"
    android:textStyle="bold"
    app:layout_constraintEnd_toEndOf="@+id/profileSetup"
    app:layout_constraintStart_toStartOf="@+id/profileSetup"
    app:layout_constraintTop_toBottomOf="@+id/profileSetup" />

<EditText
    android:id="@+id/name"
    android:layout_width="@dimen/_260sdp"
    android:layout_height="@dimen/_45sdp"
    android:layout_marginTop="@dimen/_25sdp"
    android:background="@drawable/textbox_outline"
    android:fontFamily="monospace"
    android:hint="@string/name"
    android:textAlignment="center"
    android:textColor="@color/black"
    app:layout_constraintEnd_toEndOf="@+id/profileSetupCommand"
    app:layout_constraintStart_toStartOf="@id/profileSetupCommand"
    app:layout_constraintTop_toBottomOf="@+id/profileSetupCommand"
    android:importantForAutofill="no"
    android:inputType="text" />

<Button
    android:id="@+id/setupProfile"
    android:layout_width="@dimen/_265sdp"
    android:layout_height="@dimen/_48sdp"
    android:layout_marginTop="@dimen/_35sdp"
    android:backgroundTint="@color/sea"
    android:fontFamily="@font/lexend_exa"
    android:text="@string/setupProfile"
    android:textColor="@color/white"
    android:textSize="@dimen/_16sdp"
    android:textStyle="bold"
    app:cornerRadius="0dp"
    app:layout_constraintEnd_toEndOf="@+id/name"
    app:layout_constraintStart_toStartOf="@+id/name"
    app:layout_constraintTop_toBottomOf="@+id/name"/>

</androidx.constraintlayout.widget.ConstraintLayout>